<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColorPrimary"
    tools:context=".activity.LoginActivity">
    <TextView
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/login_text_view_top"
        android:id="@+id/textViewTop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editTextPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <AutoCompleteTextView
        android:paddingLeft="50dp"
        android:hint="@string/login_text_view_hint_phone_number"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="@color/colorWhite"
        android:inputType="phone"
        android:id="@+id/editTextPhoneNumber"
        app:layout_constraintBottom_toTopOf="@id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@id/textViewTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="80dp" />
    <ImageButton
        android:background="@drawable/icon_delete_text"
        android:id="@+id/buttonDeleteText"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toTopOf="@id/editTextPhoneNumber"
        app:layout_constraintBottom_toBottomOf="@id/editTextPhoneNumber"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="15dp"/>
    <EditText
        android:hint="@string/login_text_view_hint_password"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:paddingLeft="50dp"
        android:background="@color/colorWhite"
        android:inputType="textPassword"
        android:id="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@id/editTextPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="80dp" />
    <ImageView
        android:background="@android:drawable/ic_partial_secure"
        android:layout_marginLeft="10dp"
        android:id="@+id/lockIcon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/editTextPassword"
        app:layout_constraintBottom_toBottomOf="@id/editTextPassword"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp" />
    <ImageView
        android:background="@drawable/icon_show_pass"
        android:layout_marginRight="10dp"
        android:id="@+id/buttonShowPass"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/editTextPassword"
        app:layout_constraintBottom_toBottomOf="@id/editTextPassword"
        android:layout_width="18dp"
        android:layout_height="12dp"
        android:layout_marginEnd="14dp" />
    <Button
        android:layout_marginTop="20dp"
        style="@style/buttonActive"
        android:id="@+id/buttonLogIn"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        app:layout_constraintRight_toRightOf="@id/editTextPassword"
        app:layout_constraintLeft_toLeftOf="@id/editTextPassword"
        android:text="@string/login_button_login"
        android:layout_width="wrap_content"/>
    <TextView
        android:layout_marginTop="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:text="@string/login_text_view_no_account"
        app:layout_constraintTop_toBottomOf="@id/buttonLogIn"
        android:id="@+id/textViewNoAccount"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp" />
    <TextView
        android:layout_marginTop="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="20dp"
        android:text="@string/login_text_view_sign_up"
        app:layout_constraintTop_toBottomOf="@id/buttonLogIn"
        android:id="@+id/textViewSignUp"
        style="@style/textLink"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="10dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:text="@string/login_text_view_forgot_pass"
        app:layout_constraintTop_toBottomOf="@id/textViewNoAccount"
        android:id="@+id/textViewForgotPass"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp" />
    <TextView
        android:layout_marginTop="10dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="20dp"
        android:text="@string/login_text_view_get_pass_back"
        app:layout_constraintTop_toBottomOf="@id/textViewSignUp"
        android:id="@+id/textViewGetPassBack"
        style="@style/textLink"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        style="@style/textSectionSmall"
        android:layout_marginBottom="10dp"
        android:text="@string/login_text_view_policy"
        android:id="@+id/textViewPolicy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</android.support.constraint.ConstraintLayout>